--- a/main/tests/MonoDevelop.Core.Tests/MonoDevelop.Core.Tests.csproj
+++ b/main/tests/MonoDevelop.Core.Tests/MonoDevelop.Core.Tests.csproj
@@ -113,6 +113,7 @@
     <Compile Include="MonoDevelop.FSW\PathTreeTests.cs" />
   </ItemGroup>
   <ItemGroup>
+    <Compile Include="MonoDevelop.FSW\FileChangeTrackerTests.cs" />
   </ItemGroup>
   <ItemGroup>
     <ProjectReference Include="..\..\src\core\MonoDevelop.Core\MonoDevelop.Core.csproj">
